# nonebot-plugin-easychat

./: .env.test  README.md  pyproject.toml  readme_template.md
src/nonebot_plugin_ai_reply/: __init__.py
src/nonebot_plugin_template/: config.py
